--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -3,6 +3,15 @@ app.proxy.host=
 app.proxy.password=
 app.proxy.port=
 app.proxy.username=
+db.NRDServices.dataSourceType=WM_MANAGED_DATASOURCE
+db.NRDServices.hbm2ddl=update
+db.NRDServices.jndiName=
+db.NRDServices.maxPageSize=100
+db.NRDServices.maxPoolSize=4
+db.NRDServices.minPoolSize=2
+db.NRDServices.password={WM_CLOUD_MYSQL_PASSWORD}
+db.NRDServices.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/NRD_DB?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
+db.NRDServices.username={WM_CLOUD_MYSQL_USER_NAME}
 security.enabled=false
 security.general.ssl.enabled=false
 security.general.ssl.port=443
