--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -12,10 +12,17 @@ db.NRDServices.minPoolSize=2
 db.NRDServices.password={WM_CLOUD_MYSQL_PASSWORD}
 db.NRDServices.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/NRD_DB?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
 db.NRDServices.username={WM_CLOUD_MYSQL_USER_NAME}
-security.enabled=false
+security.enabled=true
+security.general.rememberMe.enabled=true
+security.general.rememberMe.timeOut=1296000
+security.general.session.timeout=30
 security.general.ssl.enabled=false
 security.general.ssl.port=443
+security.general.tokenService.enabled=true
+security.general.tokenService.parameter=WM_AUTH_TOKEN
+security.general.tokenService.tokenValiditySeconds=1800
 security.general.xFrameOptions.allowFromUrl=
 security.general.xFrameOptions.mode=SAMEORIGIN
+security.general.xsrf.enabled=true
 security.general.xss.enabled=false
 security.providers=DEMO
